# shopify

./: .gitignore  .release-please-config.json  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
shopify/: CHANGELOG.md  Cargo.toml
shopify-cli/: CHANGELOG.md  Cargo.toml
shopify-cli/src/: main.rs
shopify/src/: lib.rs  pagination.rs  result.rs  types.rs
shopify/src/client/: mod.rs  types.rs
shopify/src/delivery_profile/: country_code.rs  mod.rs  types.rs
shopify/src/fulfillment_service/: mod.rs  types.rs
shopify/src/inventory/: mod.rs  types.rs
shopify/src/order/: fulfillment.rs  fulfillment_order.rs  mod.rs  types.rs
shopify/src/product/: currency_code.rs  mod.rs  types.rs
shopify/src/shop/: mod.rs  types.rs
shopify/src/variant/: mod.rs  types.rs
src/: error.rs  lib.rs
src/client/: mod.rs  types.rs
src/fulfillment_service/: mod.rs  types.rs
src/order/: fulfillment.rs  mod.rs  types.rs
src/product/variant/: mod.rs  types.rs
src/shop/: mod.rs  types.rs
