[package]
name = "shopify"
version = "0.1.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Shopify API Client for Rust."

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.6"
reqwest = "0.8.1"
error-chain = "0.11.0"

[dev-dependencies]
dotenv = "0.10.1"