[package]
name = "shopify-cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
shopify = { path = "../shopify" }
dotenv = "0.15.0"
serde_json = "1.0.56"