[package]
name = "shopify-cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
shopify = { path = "../shopify" }
dotenv = "0.15.0"
serde_json = "1.0.56"
serde = { version = "1", features = ["derive"] }
