[package]
name = "shopify"
version = "0.3.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Shopify API Client for Rust."
license = "MIT"
repository = "https://github.com/Ventmere/shopify"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.6"
reqwest = "0.8.1"
failure = "0.1.2"
failure_derive = "0.1.2"
url = "2.1.1"

[dev-dependencies]
dotenv = "0.10.1"