[package]
name = "shopify"
version = "0.1.7"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Shopify API Client for Rust."
license = "MIT"
repository = "https://github.com/Ventmere/shopify"
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.10", features = ["derive"] }
serde_json = "1.0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1"
url = "2.1.1"
headers = "0.3.5"
parse_link_header = "0.2.1"

[dev-dependencies]
dotenv = "0.10.1"

## Testing new cicd
